syntax = "proto3";
option go_package = "https://github.com/NaddiNadja/DISYS-ChittyChat;chat";

package chat;

service ChittyChatService {
    rpc JoinRoom(Room) returns (stream Message){}
    rpc LeaveRoom(Room) returns (stream Message){}
    rpc SendMessage(stream Message) returns (MessageAck){}
}

message Room {
    string name = 1;
    string senders_name = 2;
}

message Message {
    string sender = 1;
    Room room = 2;
    string message = 3;
    int64 lamportTime = 4;
}

message MessageAck {
    string messageAck = 1;
}

message LeaveAck {
    string leaveAck = 1;
}
